--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
+    "appwrite": "^16.1.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase": "^11.2.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9",
